bk_ida/gccida/c2/tidy_fallthru_edge
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1524:4: error: expected ';' after expression
rtx v8; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1524:5: error: use of undeclared identifier 'v8'
rtx v8; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1529:43: error: expected expression
if ( real_insn == next_real_insn( *( rtx *)&c->head[1]) ) 
                                          ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1535:13: error: expected ';' after expression
end = ( rtx)end[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1535:13: error: expected 'while' in do/while loop
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1534:1: note: to match this 'do'
do 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1538:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v6 = (  struct rtx_def *)c->head[1]; 
                         ^~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1545:1: error: use of undeclared identifier 'v8'
v8 = delete_insn( rtx); 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1547:1: error: use of undeclared identifier 'v8'
v8 = rtx[1].fld[0].rtx; 
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/cfgrtl.c:1549:7: error: use of undeclared identifier 'v8'
rtx = v8; 
      ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/tidy_fallthru_edge/src/obj/cfgrtl.o] Error 1
